--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
 	<meta name="mobile-web-app-capable" content="yes" />
 	<link rel="shortcut icon" sizes="256x256" href="icon-256.png" />
 
+	<script>
+		window.addEventListener('load', function(e) {
+			window.applicationCache.addEventListener('updateready', function(e) {
+				if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
+					// Browser downloaded a new app cache.
+					// Swap it in and reload the page to get the new hotness.
+					window.applicationCache.swapCache();
+					if (confirm('A new version of this site is available. Load it?')) {
+					window.location.reload();
+					}
+				} else {
+					// Manifest didn't changed. Nothing new to server.
+				}
+			}, false);
+
+		}, false);
+	</script>
+
     <!-- All margins and padding must be zero for the canvas to fill the screen. -->
 	<style type="text/css">
 		* {
